Definindo uri no CourseClient e colocando seu valor no application.yaml

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,9 +18,15 @@ spring:
   output:
     ansi:
       enabled: always
+
 logging:
   level:
     com.ead: TRACE
     root: INFO
     org.springframework.web: DEBUG
     org.hibernate: INFO
+
+ead:
+  api:
+    url:
+      authuser: 'http://localhost:8087'
