--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,8 @@ server:
   port: 8082
 
 spring:
+  application:
+    name: ead-course-service
   datasource:
     url: jdbc:postgresql://localhost:5432/ead-course
     username: postgres
@@ -30,3 +32,11 @@ ead:
   api:
     url:
       authuser: 'http://localhost:8087'
+
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: 'http://localhost:8761/eureka'
+  instance:
+    hostname: localhost
