feat: implementa configurações de basic auth para acessar config-server

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,3 +7,5 @@ spring:
     config:
       discovery:
         service-id: ead-config-server
+      username: "${ead-config-server-username}"
+      password: "${ead-config-server-password}"
